--- a/Bad Parenting.html
+++ b/Bad Parenting.html
@@ -924,146 +924,91 @@ footer a:hover {
   <div class="recommendations">
     <h2>You Might Also Like</h2>
     <div class="grid">
-      <a href="Burger and Frights.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Burger and Frights/thumbnail.jpg')">
-        <img class="thumb" src="games/Burger and Frights/thumbnail.jpg" alt="Burger and Frights" loading="lazy">
+      <a href="FNAF 3.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 3/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 3/thumbnail.png" alt="FNAF 3" loading="lazy">
       </div>
-      <div class="card-title">Burger and Frights</div>
-    </a><a href="FNAF Pizzeria Simulator.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF Pizzeria Simulator/thumbnail.jpg')">
-        <img class="thumb" src="games/FNAF Pizzeria Simulator/thumbnail.jpg" alt="FNAF Pizzeria Simulator" loading="lazy">
-      </div>
-      <div class="card-title">FNAF Pizzeria Simulator</div>
-    </a><a href="Hungry Lamu.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Hungry Lamu/thumbnail.jpg')">
-        <img class="thumb" src="games/Hungry Lamu/thumbnail.jpg" alt="Hungry Lamu" loading="lazy">
-      </div>
-      <div class="card-title">Hungry Lamu</div>
-    </a><a href="Granny.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Granny/thumbnail.png')">
-        <img class="thumb" src="games/Granny/thumbnail.png" alt="Granny" loading="lazy">
-      </div>
-      <div class="card-title">Granny</div>
+      <div class="card-title">FNAF 3</div>
     </a><a href="Crank It!.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Crank It!/thumbnail.jpg')">
         <img class="thumb" src="games/Crank It!/thumbnail.jpg" alt="Crank It!" loading="lazy">
       </div>
       <div class="card-title">Crank It!</div>
-    </a><a href="FNAF 3.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 3/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 3/thumbnail.png" alt="FNAF 3" loading="lazy">
+    </a><a href="Burger and Frights.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Burger and Frights/thumbnail.jpg')">
+        <img class="thumb" src="games/Burger and Frights/thumbnail.jpg" alt="Burger and Frights" loading="lazy">
       </div>
-      <div class="card-title">FNAF 3</div>
-    </a><a href="FNAF 4.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4" loading="lazy">
-      </div>
-      <div class="card-title">FNAF 4</div>
-    </a><a href="FNAF 1.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 1/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 1/thumbnail.png" alt="FNAF 1" loading="lazy">
-      </div>
-      <div class="card-title">FNAF 1</div>
+      <div class="card-title">Burger and Frights</div>
     </a><a href="FNAF Sister Location.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/FNAF Sister Location/thumbnail.jpg')">
         <img class="thumb" src="games/FNAF Sister Location/thumbnail.jpg" alt="FNAF Sister Location" loading="lazy">
       </div>
       <div class="card-title">FNAF Sister Location</div>
+    </a><a href="Hungry Lamu.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hungry Lamu/thumbnail.jpg')">
+        <img class="thumb" src="games/Hungry Lamu/thumbnail.jpg" alt="Hungry Lamu" loading="lazy">
+      </div>
+      <div class="card-title">Hungry Lamu</div>
+    </a><a href="FNAF 4.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4" loading="lazy">
+      </div>
+      <div class="card-title">FNAF 4</div>
+    </a><a href="FNAF Pizzeria Simulator.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF Pizzeria Simulator/thumbnail.jpg')">
+        <img class="thumb" src="games/FNAF Pizzeria Simulator/thumbnail.jpg" alt="FNAF Pizzeria Simulator" loading="lazy">
+      </div>
+      <div class="card-title">FNAF Pizzeria Simulator</div>
+    </a><a href="Granny.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Granny/thumbnail.png')">
+        <img class="thumb" src="games/Granny/thumbnail.png" alt="Granny" loading="lazy">
+      </div>
+      <div class="card-title">Granny</div>
     </a><a href="FNAF 2.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/FNAF 2/thumbnail.png')">
         <img class="thumb" src="games/FNAF 2/thumbnail.png" alt="FNAF 2" loading="lazy">
       </div>
       <div class="card-title">FNAF 2</div>
-    </a><a href="Henry Stickmin Infiltrating The Airship.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg')">
-        <img class="thumb" src="games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg" alt="Henry Stickmin Infiltrating The Airship" loading="lazy">
+    </a><a href="FNAF 1.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 1/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 1/thumbnail.png" alt="FNAF 1" loading="lazy">
       </div>
-      <div class="card-title">Henry Stickmin Infiltrating The Airship</div>
-    </a><a href="Blackjack.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Blackjack/thumbnail.png')">
-        <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack" loading="lazy">
-      </div>
-      <div class="card-title">Blackjack</div>
-    </a><a href="Baldi’s Basics.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Baldi’s Basics/thumbnail.png')">
-        <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics" loading="lazy">
-      </div>
-      <div class="card-title">Baldi’s Basics</div>
-    </a><a href="Bounty of One.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bounty of One/thumbnail.png')">
-        <img class="thumb" src="games/Bounty of One/thumbnail.png" alt="Bounty of One" loading="lazy">
-      </div>
-      <div class="card-title">Bounty of One</div>
-    </a><a href="Bob The Robber 5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 5/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5" loading="lazy">
-      </div>
-      <div class="card-title">Bob The Robber 5</div>
-    </a><a href="Bad Piggies.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Piggies/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies" loading="lazy">
-      </div>
-      <div class="card-title">Bad Piggies</div>
-    </a><a href="Clear Vision 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2" loading="lazy">
-      </div>
-      <div class="card-title">Clear Vision 2</div>
+      <div class="card-title">FNAF 1</div>
     </a><a href="Clear Vision 3.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 3/thumbnail.png')">
         <img class="thumb" src="games/Clear Vision 3/thumbnail.png" alt="Clear Vision 3" loading="lazy">
       </div>
       <div class="card-title">Clear Vision 3</div>
-    </a><a href="Friday Night Funkin.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Friday Night Funkin/thumbnail.png')">
-        <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin" loading="lazy">
-      </div>
-      <div class="card-title">Friday Night Funkin</div>
-    </a><a href="Escape Road .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Escape Road /thumbnail.png')">
-        <img class="thumb" src="games/Escape Road /thumbnail.png" alt="Escape Road " loading="lazy">
-      </div>
-      <div class="card-title">Escape Road </div>
-    </a><a href="Cut the Rope.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Cut the Rope/thumbnail.png')">
-        <img class="thumb" src="games/Cut the Rope/thumbnail.png" alt="Cut the Rope" loading="lazy">
-      </div>
-      <div class="card-title">Cut the Rope</div>
     </a><a href="Deepest Sword.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Deepest Sword/thumbnail.jpg')">
         <img class="thumb" src="games/Deepest Sword/thumbnail.jpg" alt="Deepest Sword" loading="lazy">
       </div>
       <div class="card-title">Deepest Sword</div>
-    </a><a href="Burrito Bison Launcha Libre.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Burrito Bison Launcha Libre/thumbnail.jpg')">
-        <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre" loading="lazy">
+    </a><a href="Clear Vision 5.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 5/thumbnail.png')">
+        <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5" loading="lazy">
       </div>
-      <div class="card-title">Burrito Bison Launcha Libre</div>
-    </a><a href="Dreader.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dreader/thumbnail.png')">
-        <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader" loading="lazy">
+      <div class="card-title">Clear Vision 5</div>
+    </a><a href="Drive Mad.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drive Mad/thumbnail.png')">
+        <img class="thumb" src="games/Drive Mad/thumbnail.png" alt="Drive Mad" loading="lazy">
       </div>
-      <div class="card-title">Dreader</div>
-    </a><a href="Ink Game.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Ink Game/thumbnail.jpg')">
-        <img class="thumb" src="games/Ink Game/thumbnail.jpg" alt="Ink Game" loading="lazy">
+      <div class="card-title">Drive Mad</div>
+    </a><a href="Escape Road .html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Escape Road /thumbnail.png')">
+        <img class="thumb" src="games/Escape Road /thumbnail.png" alt="Escape Road " loading="lazy">
       </div>
-      <div class="card-title">Ink Game</div>
-    </a><a href="Dunk Shot.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dunk Shot/thumbnail.png')">
-        <img class="thumb" src="games/Dunk Shot/thumbnail.png" alt="Dunk Shot" loading="lazy">
+      <div class="card-title">Escape Road </div>
+    </a><a href="Fireboy and Watergirl 1.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 1/thumbnail.jpg')">
+        <img class="thumb" src="games/Fireboy and Watergirl 1/thumbnail.jpg" alt="Fireboy and Watergirl 1" loading="lazy">
       </div>
-      <div class="card-title">Dunk Shot</div>
-    </a><a href="Vapmpire Survivors.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Vapmpire Survivors/thumbnail.png')">
-        <img class="thumb" src="games/Vapmpire Survivors/thumbnail.png" alt="Vapmpire Survivors" loading="lazy">
+      <div class="card-title">Fireboy and Watergirl 1</div>
+    </a><a href="Basketball FRVR.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Basketball FRVR/thumbnail.jpg')">
+        <img class="thumb" src="games/Basketball FRVR/thumbnail.jpg" alt="Basketball FRVR" loading="lazy">
       </div>
-      <div class="card-title">Vapmpire Survivors</div>
-    </a><a href="Earth Taken.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Earth Taken/thumbnail.jpg')">
-        <img class="thumb" src="games/Earth Taken/thumbnail.jpg" alt="Earth Taken" loading="lazy">
-      </div>
-      <div class="card-title">Earth Taken</div>
+      <div class="card-title">Basketball FRVR</div>
     </a><a href="Henry Stickmin Fleeing The Complex.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
         <img class="thumb" src="games/Henry Stickmin Fleeing The Complex/thumbnail.png" alt="Henry Stickmin Fleeing The Complex" loading="lazy">
@@ -1074,31 +1019,86 @@ footer a:hover {
         <img class="thumb" src="games/CS Go Clicker/thumbnail.png" alt="CS Go Clicker" loading="lazy">
       </div>
       <div class="card-title">CS Go Clicker</div>
-    </a><a href="Going Balls.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Going Balls/thumbnail.png')">
-        <img class="thumb" src="games/Going Balls/thumbnail.png" alt="Going Balls" loading="lazy">
+    </a><a href="Deltarune.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Deltarune/thumbnail.jpg')">
+        <img class="thumb" src="games/Deltarune/thumbnail.jpg" alt="Deltarune" loading="lazy">
       </div>
-      <div class="card-title">Going Balls</div>
+      <div class="card-title">Deltarune</div>
+    </a><a href="Bob The Robber 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2" loading="lazy">
+      </div>
+      <div class="card-title">Bob The Robber 2</div>
+    </a><a href="Happy Room.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Happy Room/thumbnail.png')">
+        <img class="thumb" src="games/Happy Room/thumbnail.png" alt="Happy Room" loading="lazy">
+      </div>
+      <div class="card-title">Happy Room</div>
     </a><a href="Helix Jump.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Helix Jump/thumbnail.jpg')">
         <img class="thumb" src="games/Helix Jump/thumbnail.jpg" alt="Helix Jump" loading="lazy">
       </div>
       <div class="card-title">Helix Jump</div>
-    </a><a href="Drift Boss.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Drift Boss/thumbnail.png')">
-        <img class="thumb" src="games/Drift Boss/thumbnail.png" alt="Drift Boss" loading="lazy">
+    </a><a href="Capybara Clicker.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Capybara Clicker/thumbnail.png')">
+        <img class="thumb" src="games/Capybara Clicker/thumbnail.png" alt="Capybara Clicker" loading="lazy">
       </div>
-      <div class="card-title">Drift Boss</div>
-    </a><a href="Henry Stickmin Escaping The Prison.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
-        <img class="thumb" src="games/Henry Stickmin Escaping The Prison/thumbnail.jpg" alt="Henry Stickmin Escaping The Prison" loading="lazy">
+      <div class="card-title">Capybara Clicker</div>
+    </a><a href="Going Balls.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Going Balls/thumbnail.png')">
+        <img class="thumb" src="games/Going Balls/thumbnail.png" alt="Going Balls" loading="lazy">
       </div>
-      <div class="card-title">Henry Stickmin Escaping The Prison</div>
+      <div class="card-title">Going Balls</div>
+    </a><a href="Bouncemasters.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bouncemasters/thumbnail.jpg')">
+        <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters" loading="lazy">
+      </div>
+      <div class="card-title">Bouncemasters</div>
+    </a><a href="Dreader.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dreader/thumbnail.png')">
+        <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader" loading="lazy">
+      </div>
+      <div class="card-title">Dreader</div>
+    </a><a href="BTD5.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/BTD5/thumbnail.jpg')">
+        <img class="thumb" src="games/BTD5/thumbnail.jpg" alt="BTD5" loading="lazy">
+      </div>
+      <div class="card-title">BTD5</div>
     </a><a href="Bloodmoney 2.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney 2/thumbnail.jpg')">
         <img class="thumb" src="games/Bloodmoney 2/thumbnail.jpg" alt="Bloodmoney 2" loading="lazy">
       </div>
       <div class="card-title">Bloodmoney 2</div>
+    </a><a href="Effing Worms.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Effing Worms/thumbnail.jpg')">
+        <img class="thumb" src="games/Effing Worms/thumbnail.jpg" alt="Effing Worms" loading="lazy">
+      </div>
+      <div class="card-title">Effing Worms</div>
+    </a><a href="Ages of Conflict.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Ages of Conflict/thumbnail.png')">
+        <img class="thumb" src="games/Ages of Conflict/thumbnail.png" alt="Ages of Conflict" loading="lazy">
+      </div>
+      <div class="card-title">Ages of Conflict</div>
+    </a><a href="Bob The Robber 5.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 5/thumbnail.jpg')">
+        <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5" loading="lazy">
+      </div>
+      <div class="card-title">Bob The Robber 5</div>
+    </a><a href="Elastic Face.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Elastic Face/thumbnail.png')">
+        <img class="thumb" src="games/Elastic Face/thumbnail.png" alt="Elastic Face" loading="lazy">
+      </div>
+      <div class="card-title">Elastic Face</div>
+    </a><a href="Cut the Rope.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Cut the Rope/thumbnail.png')">
+        <img class="thumb" src="games/Cut the Rope/thumbnail.png" alt="Cut the Rope" loading="lazy">
+      </div>
+      <div class="card-title">Cut the Rope</div>
+    </a><a href="Doki Doki Literature Club.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Doki Doki Literature Club/thumbnail.jpg')">
+        <img class="thumb" src="games/Doki Doki Literature Club/thumbnail.jpg" alt="Doki Doki Literature Club" loading="lazy">
+      </div>
+      <div class="card-title">Doki Doki Literature Club</div>
     </a>
     </div>
   </div>
