--- a/Blackjack.html
+++ b/Blackjack.html
@@ -934,6 +934,11 @@ footer a:hover {
         <img class="thumb" src="games/Friday Night Funkin/thumbnail.png" alt="Friday Night Funkin" loading="lazy">
       </div>
       <div class="card-title">Friday Night Funkin</div>
+    </a><a href="Elastic Face.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Elastic Face/thumbnail.png')">
+        <img class="thumb" src="games/Elastic Face/thumbnail.png" alt="Elastic Face" loading="lazy">
+      </div>
+      <div class="card-title">Elastic Face</div>
     </a><a href="Ages of Conflict.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Ages of Conflict/thumbnail.png')">
         <img class="thumb" src="games/Ages of Conflict/thumbnail.png" alt="Ages of Conflict" loading="lazy">
@@ -944,66 +949,106 @@ footer a:hover {
         <img class="thumb" src="games/Bitlife/thumbnail.jpg" alt="Bitlife" loading="lazy">
       </div>
       <div class="card-title">Bitlife</div>
-    </a><a href="Elastic Face.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Elastic Face/thumbnail.png')">
-        <img class="thumb" src="games/Elastic Face/thumbnail.png" alt="Elastic Face" loading="lazy">
+    </a><a href="FNAF 1.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 1/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 1/thumbnail.png" alt="FNAF 1" loading="lazy">
       </div>
-      <div class="card-title">Elastic Face</div>
-    </a><a href="Bob The Robber 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2" loading="lazy">
+      <div class="card-title">FNAF 1</div>
+    </a><a href="Dead Zed 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dead Zed 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Dead Zed 2/thumbnail.jpg" alt="Dead Zed 2" loading="lazy">
       </div>
-      <div class="card-title">Bob The Robber 2</div>
-    </a><a href="Gobble.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Gobble/thumbnail.jpg')">
-        <img class="thumb" src="games/Gobble/thumbnail.jpg" alt="Gobble" loading="lazy">
+      <div class="card-title">Dead Zed 2</div>
+    </a><a href="Crazy Cattle 3D.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cattle 3D/thumbnail.png')">
+        <img class="thumb" src="games/Crazy Cattle 3D/thumbnail.png" alt="Crazy Cattle 3D" loading="lazy">
       </div>
-      <div class="card-title">Gobble</div>
-    </a><a href="Baldi’s Basics.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Baldi’s Basics/thumbnail.png')">
-        <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics" loading="lazy">
+      <div class="card-title">Crazy Cattle 3D</div>
+    </a><a href="Bad Parenting.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bad Parenting/thumbnail.jpg')">
+        <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting" loading="lazy">
       </div>
-      <div class="card-title">Baldi’s Basics</div>
+      <div class="card-title">Bad Parenting</div>
+    </a><a href="Basketball FRVR.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Basketball FRVR/thumbnail.jpg')">
+        <img class="thumb" src="games/Basketball FRVR/thumbnail.jpg" alt="Basketball FRVR" loading="lazy">
+      </div>
+      <div class="card-title">Basketball FRVR</div>
+    </a><a href="Henry Stickmin Infiltrating The Airship.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg')">
+        <img class="thumb" src="games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg" alt="Henry Stickmin Infiltrating The Airship" loading="lazy">
+      </div>
+      <div class="card-title">Henry Stickmin Infiltrating The Airship</div>
+    </a><a href="Vapmpire Survivors.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Vapmpire Survivors/thumbnail.png')">
+        <img class="thumb" src="games/Vapmpire Survivors/thumbnail.png" alt="Vapmpire Survivors" loading="lazy">
+      </div>
+      <div class="card-title">Vapmpire Survivors</div>
+    </a><a href="FNAF Pizzeria Simulator.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF Pizzeria Simulator/thumbnail.jpg')">
+        <img class="thumb" src="games/FNAF Pizzeria Simulator/thumbnail.jpg" alt="FNAF Pizzeria Simulator" loading="lazy">
+      </div>
+      <div class="card-title">FNAF Pizzeria Simulator</div>
+    </a><a href="10 Minutes Till Dawn.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/10 Minutes Till Dawn/thumbnail.png')">
+        <img class="thumb" src="games/10 Minutes Till Dawn/thumbnail.png" alt="10 Minutes Till Dawn" loading="lazy">
+      </div>
+      <div class="card-title">10 Minutes Till Dawn</div>
+    </a><a href="Ink Game.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Ink Game/thumbnail.jpg')">
+        <img class="thumb" src="games/Ink Game/thumbnail.jpg" alt="Ink Game" loading="lazy">
+      </div>
+      <div class="card-title">Ink Game</div>
+    </a><a href="Extreme Run 3D.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Extreme Run 3D/thumbnail.jpg')">
+        <img class="thumb" src="games/Extreme Run 3D/thumbnail.jpg" alt="Extreme Run 3D" loading="lazy">
+      </div>
+      <div class="card-title">Extreme Run 3D</div>
+    </a><a href="Going Balls.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Going Balls/thumbnail.png')">
+        <img class="thumb" src="games/Going Balls/thumbnail.png" alt="Going Balls" loading="lazy">
+      </div>
+      <div class="card-title">Going Balls</div>
+    </a><a href="Burger and Frights.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Burger and Frights/thumbnail.jpg')">
+        <img class="thumb" src="games/Burger and Frights/thumbnail.jpg" alt="Burger and Frights" loading="lazy">
+      </div>
+      <div class="card-title">Burger and Frights</div>
     </a><a href="Doki Doki Literature Club.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Doki Doki Literature Club/thumbnail.jpg')">
         <img class="thumb" src="games/Doki Doki Literature Club/thumbnail.jpg" alt="Doki Doki Literature Club" loading="lazy">
       </div>
       <div class="card-title">Doki Doki Literature Club</div>
-    </a><a href="Crossy Road.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crossy Road/thumbnail.jpg')">
-        <img class="thumb" src="games/Crossy Road/thumbnail.jpg" alt="Crossy Road" loading="lazy">
+    </a><a href="Escape Road .html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Escape Road /thumbnail.png')">
+        <img class="thumb" src="games/Escape Road /thumbnail.png" alt="Escape Road " loading="lazy">
       </div>
-      <div class="card-title">Crossy Road</div>
-    </a><a href="Cluster Rush.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Cluster Rush/thumbnail.png')">
-        <img class="thumb" src="games/Cluster Rush/thumbnail.png" alt="Cluster Rush" loading="lazy">
+      <div class="card-title">Escape Road </div>
+    </a><a href="Cut the Rope.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Cut the Rope/thumbnail.png')">
+        <img class="thumb" src="games/Cut the Rope/thumbnail.png" alt="Cut the Rope" loading="lazy">
       </div>
-      <div class="card-title">Cluster Rush</div>
-    </a><a href="Burrito Bison Launcha Libre.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Burrito Bison Launcha Libre/thumbnail.jpg')">
-        <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre" loading="lazy">
+      <div class="card-title">Cut the Rope</div>
+    </a><a href="Deadly Descent.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Deadly Descent/thumbnail.png')">
+        <img class="thumb" src="games/Deadly Descent/thumbnail.png" alt="Deadly Descent" loading="lazy">
       </div>
-      <div class="card-title">Burrito Bison Launcha Libre</div>
-    </a><a href="Bad Piggies.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Piggies/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies" loading="lazy">
+      <div class="card-title">Deadly Descent</div>
+    </a><a href="Bloodmoney 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Bloodmoney 2/thumbnail.jpg" alt="Bloodmoney 2" loading="lazy">
       </div>
-      <div class="card-title">Bad Piggies</div>
-    </a><a href="Clear Vision 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Clear Vision 2/thumbnail.jpg" alt="Clear Vision 2" loading="lazy">
+      <div class="card-title">Bloodmoney 2</div>
+    </a><a href="Get Yoked.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Get Yoked/thumbnail.jpg')">
+        <img class="thumb" src="games/Get Yoked/thumbnail.jpg" alt="Get Yoked" loading="lazy">
       </div>
-      <div class="card-title">Clear Vision 2</div>
-    </a><a href="Bob The Robber 5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 5/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5" loading="lazy">
+      <div class="card-title">Get Yoked</div>
+    </a><a href="Douchebag Life.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Douchebag Life/thumbnail.jpg')">
+        <img class="thumb" src="games/Douchebag Life/thumbnail.jpg" alt="Douchebag Life" loading="lazy">
       </div>
-      <div class="card-title">Bob The Robber 5</div>
-    </a><a href="CS Go Clicker.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/CS Go Clicker/thumbnail.png')">
-        <img class="thumb" src="games/CS Go Clicker/thumbnail.png" alt="CS Go Clicker" loading="lazy">
-      </div>
-      <div class="card-title">CS Go Clicker</div>
+      <div class="card-title">Douchebag Life</div>
     </a><a href="Block Blast.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Block Blast/thumbnail.jpg')">
         <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast" loading="lazy">
@@ -1014,91 +1059,46 @@ footer a:hover {
         <img class="thumb" src="games/Crank It!/thumbnail.jpg" alt="Crank It!" loading="lazy">
       </div>
       <div class="card-title">Crank It!</div>
-    </a><a href="Bounty of One.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bounty of One/thumbnail.png')">
-        <img class="thumb" src="games/Bounty of One/thumbnail.png" alt="Bounty of One" loading="lazy">
+    </a><a href="Happy Wheels.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
+        <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels" loading="lazy">
       </div>
-      <div class="card-title">Bounty of One</div>
-    </a><a href="Crazy Motorcycle.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crazy Motorcycle/thumbnail.jpg')">
-        <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle" loading="lazy">
-      </div>
-      <div class="card-title">Crazy Motorcycle</div>
-    </a><a href="1v1.lol.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/1v1.lol/thumbnail.png')">
-        <img class="thumb" src="games/1v1.lol/thumbnail.png" alt="1v1.lol" loading="lazy">
-      </div>
-      <div class="card-title">1v1.lol</div>
-    </a><a href="Bouncemasters.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bouncemasters/thumbnail.jpg')">
-        <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters" loading="lazy">
-      </div>
-      <div class="card-title">Bouncemasters</div>
-    </a><a href="Cookie Clicker.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Cookie Clicker/thumbnail.png')">
-        <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker" loading="lazy">
-      </div>
-      <div class="card-title">Cookie Clicker</div>
-    </a><a href="Effing Worms.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Effing Worms/thumbnail.jpg')">
-        <img class="thumb" src="games/Effing Worms/thumbnail.jpg" alt="Effing Worms" loading="lazy">
-      </div>
-      <div class="card-title">Effing Worms</div>
-    </a><a href="Douchebag Life.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Douchebag Life/thumbnail.jpg')">
-        <img class="thumb" src="games/Douchebag Life/thumbnail.jpg" alt="Douchebag Life" loading="lazy">
-      </div>
-      <div class="card-title">Douchebag Life</div>
-    </a><a href="Fruit Ninja.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Fruit Ninja/thumbnail.jpg')">
-        <img class="thumb" src="games/Fruit Ninja/thumbnail.jpg" alt="Fruit Ninja" loading="lazy">
-      </div>
-      <div class="card-title">Fruit Ninja</div>
-    </a><a href="10 Minutes Till Dawn.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/10 Minutes Till Dawn/thumbnail.png')">
-        <img class="thumb" src="games/10 Minutes Till Dawn/thumbnail.png" alt="10 Minutes Till Dawn" loading="lazy">
-      </div>
-      <div class="card-title">10 Minutes Till Dawn</div>
-    </a><a href="Get Yoked.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Get Yoked/thumbnail.jpg')">
-        <img class="thumb" src="games/Get Yoked/thumbnail.jpg" alt="Get Yoked" loading="lazy">
-      </div>
-      <div class="card-title">Get Yoked</div>
-    </a><a href="Hungry Lamu.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Hungry Lamu/thumbnail.jpg')">
-        <img class="thumb" src="games/Hungry Lamu/thumbnail.jpg" alt="Hungry Lamu" loading="lazy">
-      </div>
-      <div class="card-title">Hungry Lamu</div>
-    </a><a href="Blaze Drifter.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Blaze Drifter/thumbnail.jpg')">
-        <img class="thumb" src="games/Blaze Drifter/thumbnail.jpg" alt="Blaze Drifter" loading="lazy">
-      </div>
-      <div class="card-title">Blaze Drifter</div>
-    </a><a href="Drift Hunters.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Drift Hunters/thumbnail.jpg')">
-        <img class="thumb" src="games/Drift Hunters/thumbnail.jpg" alt="Drift Hunters" loading="lazy">
-      </div>
-      <div class="card-title">Drift Hunters</div>
-    </a><a href="Going Balls.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Going Balls/thumbnail.png')">
-        <img class="thumb" src="games/Going Balls/thumbnail.png" alt="Going Balls" loading="lazy">
-      </div>
-      <div class="card-title">Going Balls</div>
-    </a><a href="Bit Planes.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bit Planes/thumbnail.jpg')">
-        <img class="thumb" src="games/Bit Planes/thumbnail.jpg" alt="Bit Planes" loading="lazy">
-      </div>
-      <div class="card-title">Bit Planes</div>
+      <div class="card-title">Happy Wheels</div>
     </a><a href="Infinite Craft.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Infinite Craft/thumbnail.png')">
         <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft" loading="lazy">
       </div>
       <div class="card-title">Infinite Craft</div>
-    </a><a href="FNAF 4.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4" loading="lazy">
+    </a><a href="Gobble.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Gobble/thumbnail.jpg')">
+        <img class="thumb" src="games/Gobble/thumbnail.jpg" alt="Gobble" loading="lazy">
       </div>
-      <div class="card-title">FNAF 4</div>
+      <div class="card-title">Gobble</div>
+    </a><a href="Grindcraft.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Grindcraft/thumbnail.jpg')">
+        <img class="thumb" src="games/Grindcraft/thumbnail.jpg" alt="Grindcraft" loading="lazy">
+      </div>
+      <div class="card-title">Grindcraft</div>
+    </a><a href="Effing Worms.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Effing Worms/thumbnail.jpg')">
+        <img class="thumb" src="games/Effing Worms/thumbnail.jpg" alt="Effing Worms" loading="lazy">
+      </div>
+      <div class="card-title">Effing Worms</div>
+    </a><a href="Gold Digger FRVR.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Gold Digger FRVR/thumbnail.png')">
+        <img class="thumb" src="games/Gold Digger FRVR/thumbnail.png" alt="Gold Digger FRVR" loading="lazy">
+      </div>
+      <div class="card-title">Gold Digger FRVR</div>
+    </a><a href="Cluster Rush.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Cluster Rush/thumbnail.png')">
+        <img class="thumb" src="games/Cluster Rush/thumbnail.png" alt="Cluster Rush" loading="lazy">
+      </div>
+      <div class="card-title">Cluster Rush</div>
+    </a><a href="Clear Vision 1.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 1/thumbnail.jpg')">
+        <img class="thumb" src="games/Clear Vision 1/thumbnail.jpg" alt="Clear Vision 1" loading="lazy">
+      </div>
+      <div class="card-title">Clear Vision 1</div>
     </a>
     </div>
   </div>
